// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MarketScanner renders empty state when no results 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="w-full px-4 mt-8 mb-8"
  >
    <div
      class="flex items-center gap-2 mb-6"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-scan-search h-7 w-7 text-text-secondary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 7V5a2 2 0 0 1 2-2h2"
        />
        <path
          d="M17 3h2a2 2 0 0 1 2 2v2"
        />
        <path
          d="M21 17v2a2 2 0 0 1-2 2h-2"
        />
        <path
          d="M7 21H5a2 2 0 0 1-2-2v-2"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="m16 16-1.9-1.9"
        />
      </svg>
      <h1
        class="text-2xl font-bold text-text-emphasis"
      >
        Market Scanner
      </h1>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all mb-6 bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 pt-4"
      >
        <div
          class="flex gap-4 items-end flex-wrap"
        >
          <div
            class="min-w-[220px]"
          >
            <div
              class="flex items-center justify-between mb-1"
            >
              <label
                class="text-xs text-text-secondary"
              >
                Source Location
              </label>
            </div>
            <button
              aria-autocomplete="none"
              aria-controls="radix-_r_o_"
              aria-expanded="false"
              class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-emphasis"
              data-state="closed"
              dir="ltr"
              role="combobox"
              type="button"
            >
              <span
                style="pointer-events: none;"
              >
                The Forge
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 opacity-50"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="min-w-[220px]"
          >
            <label
              class="text-xs text-text-secondary mb-1 block"
            >
              Destination Location
            </label>
            <button
              aria-autocomplete="none"
              aria-controls="radix-_r_p_"
              aria-expanded="false"
              class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-emphasis"
              data-state="closed"
              dir="ltr"
              role="combobox"
              type="button"
            >
              <span
                style="pointer-events: none;"
              >
                Domain
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 opacity-50"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-[var(--color-border-active)] bg-transparent text-[var(--color-text-primary)] shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-9 px-4 py-2"
            >
              Load
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-scan-search h-4 w-4 mr-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 7V5a2 2 0 0 1 2-2h2"
                />
                <path
                  d="M17 3h2a2 2 0 0 1 2 2v2"
                />
                <path
                  d="M21 17v2a2 2 0 0 1-2 2h-2"
                />
                <path
                  d="M7 21H5a2 2 0 0 1-2-2v-2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
                <path
                  d="m16 16-1.9-1.9"
                />
              </svg>
              Scan
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-[var(--color-text-secondary)] hover:bg-[var(--color-surface-elevated)] hover:text-[var(--color-text-primary)] h-9 w-9"
              title="Manage trading structures"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 py-8"
      >
        <p
          class="text-center text-text-secondary text-base"
        >
          No arbitrage opportunities found. Try scanning to refresh data.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarketScanner renders loading skeleton while fetching results 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="w-full px-4 mt-8 mb-8"
  >
    <div
      class="flex items-center gap-2 mb-6"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-scan-search h-7 w-7 text-text-secondary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 7V5a2 2 0 0 1 2-2h2"
        />
        <path
          d="M17 3h2a2 2 0 0 1 2 2v2"
        />
        <path
          d="M21 17v2a2 2 0 0 1-2 2h-2"
        />
        <path
          d="M7 21H5a2 2 0 0 1-2-2v-2"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="m16 16-1.9-1.9"
        />
      </svg>
      <h1
        class="text-2xl font-bold text-text-emphasis"
      >
        Market Scanner
      </h1>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all mb-6 bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 pt-4"
      >
        <div
          class="flex gap-4 items-end flex-wrap"
        >
          <div
            class="min-w-[220px]"
          >
            <div
              class="flex items-center justify-between mb-1"
            >
              <label
                class="text-xs text-text-secondary"
              >
                Source Location
              </label>
            </div>
            <button
              aria-autocomplete="none"
              aria-controls="radix-_r_0_"
              aria-expanded="false"
              class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-emphasis"
              data-state="closed"
              dir="ltr"
              role="combobox"
              type="button"
            >
              <span
                style="pointer-events: none;"
              >
                The Forge
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 opacity-50"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="min-w-[220px]"
          >
            <label
              class="text-xs text-text-secondary mb-1 block"
            >
              Destination Location
            </label>
            <button
              aria-autocomplete="none"
              aria-controls="radix-_r_1_"
              aria-expanded="false"
              class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-emphasis"
              data-state="closed"
              dir="ltr"
              role="combobox"
              type="button"
            >
              <span
                style="pointer-events: none;"
              >
                Domain
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 opacity-50"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-[var(--color-border-active)] bg-transparent text-[var(--color-text-primary)] shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-9 px-4 py-2"
            >
              Load
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-scan-search h-4 w-4 mr-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 7V5a2 2 0 0 1 2-2h2"
                />
                <path
                  d="M17 3h2a2 2 0 0 1 2 2v2"
                />
                <path
                  d="M21 17v2a2 2 0 0 1-2 2h-2"
                />
                <path
                  d="M7 21H5a2 2 0 0 1-2-2v-2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
                <path
                  d="m16 16-1.9-1.9"
                />
              </svg>
              Scan
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-[var(--color-text-secondary)] hover:bg-[var(--color-surface-elevated)] hover:text-[var(--color-text-primary)] h-9 w-9"
              title="Manage trading structures"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 py-8"
      >
        <p
          class="text-center text-text-secondary text-base"
        >
          No arbitrage opportunities found. Try scanning to refresh data.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarketScanner renders results table with arbitrage rows 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="w-full px-4 mt-8 mb-8"
  >
    <div
      class="flex items-center gap-2 mb-6"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-scan-search h-7 w-7 text-text-secondary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 7V5a2 2 0 0 1 2-2h2"
        />
        <path
          d="M17 3h2a2 2 0 0 1 2 2v2"
        />
        <path
          d="M21 17v2a2 2 0 0 1-2 2h-2"
        />
        <path
          d="M7 21H5a2 2 0 0 1-2-2v-2"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="m16 16-1.9-1.9"
        />
      </svg>
      <h1
        class="text-2xl font-bold text-text-emphasis"
      >
        Market Scanner
      </h1>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all mb-6 bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 pt-4"
      >
        <div
          class="flex gap-4 items-end flex-wrap"
        >
          <div
            class="min-w-[220px]"
          >
            <div
              class="flex items-center justify-between mb-1"
            >
              <label
                class="text-xs text-text-secondary"
              >
                Source Location
              </label>
            </div>
            <button
              aria-autocomplete="none"
              aria-controls="radix-_r_1g_"
              aria-expanded="false"
              class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-emphasis"
              data-state="closed"
              dir="ltr"
              role="combobox"
              type="button"
            >
              <span
                style="pointer-events: none;"
              >
                The Forge
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 opacity-50"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="min-w-[220px]"
          >
            <label
              class="text-xs text-text-secondary mb-1 block"
            >
              Destination Location
            </label>
            <button
              aria-autocomplete="none"
              aria-controls="radix-_r_1h_"
              aria-expanded="false"
              class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-emphasis"
              data-state="closed"
              dir="ltr"
              role="combobox"
              type="button"
            >
              <span
                style="pointer-events: none;"
              >
                Domain
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 opacity-50"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-[var(--color-border-active)] bg-transparent text-[var(--color-text-primary)] shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-9 px-4 py-2"
            >
              Load
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-scan-search h-4 w-4 mr-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 7V5a2 2 0 0 1 2-2h2"
                />
                <path
                  d="M17 3h2a2 2 0 0 1 2 2v2"
                />
                <path
                  d="M21 17v2a2 2 0 0 1-2 2h-2"
                />
                <path
                  d="M7 21H5a2 2 0 0 1-2-2v-2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
                <path
                  d="m16 16-1.9-1.9"
                />
              </svg>
              Scan
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-[var(--color-text-secondary)] hover:bg-[var(--color-surface-elevated)] hover:text-[var(--color-text-primary)] h-9 w-9"
              title="Manage trading structures"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
            </button>
          </div>
          <span
            class="text-xs text-text-muted ml-1"
          >
            Last updated: 
            2/22/2026, 2:00:00 AM
          </span>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-subtle"
    >
      <div
        class="overflow-x-auto outline-none"
        tabindex="0"
      >
        <div
          class="relative w-full overflow-auto"
        >
          <table
            class="w-full caption-bottom text-sm"
          >
            <thead
              class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
            >
              <tr
                class="border-b transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted bg-background-void border-overlay-subtle"
              >
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Item
                </th>
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Indicator
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Net Profit/unit
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  m³
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Days to Sell
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Buy Price
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Sell Price
                </th>
                <th
                  class="h-10 px-2 align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis text-right"
                >
                  Volume Available
                </th>
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Add to Run
                </th>
              </tr>
            </thead>
            <tbody
              class="[&_tr:last-child]:border-0"
            >
              <tr
                class="border-b transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted cursor-pointer border-overlay-subtle"
                style="background-color: var(--color-warning-tint);"
              >
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <img
                      alt="Tritanium"
                      src="https://images.evetech.net/types/34/icon?size=32"
                    />
                    <span
                      class="text-sm font-semibold text-text-emphasis"
                    >
                      Tritanium
                    </span>
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <span
                    class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium border"
                    style="color: var(--color-manufacturing-amber); background-color: var(--color-warning-tint); border-color: var(--color-manufacturing-amber)40;"
                  >
                    gap
                  </span>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right"
                >
                  <span
                    class="text-sm font-semibold"
                    style="color: var(--color-success-teal);"
                  >
                    150.00K ISK
                  </span>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  0.01
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  0.5
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  5.5 ISK
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  7 ISK
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  10,000,000
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <button
                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-[var(--color-border-active)] bg-transparent text-[var(--color-text-primary)] shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart h-3.5 w-3.5 mr-1"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    Add
                  </button>
                </td>
              </tr>
              <tr
                class="border-b transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted cursor-pointer border-overlay-subtle"
                style="background-color: var(--color-info-tint);"
              >
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <img
                      alt="Pyerite"
                      src="https://images.evetech.net/types/35/icon?size=32"
                    />
                    <span
                      class="text-sm font-semibold text-text-emphasis"
                    >
                      Pyerite
                    </span>
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <span
                    class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium border"
                    style="color: var(--color-primary-cyan); background-color: var(--color-info-tint); border-color: var(--color-primary-cyan)40;"
                  >
                    markup
                  </span>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right"
                >
                  <span
                    class="text-sm font-semibold"
                    style="color: var(--color-success-teal);"
                  >
                    75.00K ISK
                  </span>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  0.01
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  1.2
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  9 ISK
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  10.5 ISK
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-sm text-text-secondary"
                >
                  5,000,000
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <button
                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-[var(--color-border-active)] bg-transparent text-[var(--color-text-primary)] shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart h-3.5 w-3.5 mr-1"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    Add
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarketScanner renders with stations in location picker after load 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="w-full px-4 mt-8 mb-8"
  >
    <div
      class="flex items-center gap-2 mb-6"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-scan-search h-7 w-7 text-text-secondary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 7V5a2 2 0 0 1 2-2h2"
        />
        <path
          d="M17 3h2a2 2 0 0 1 2 2v2"
        />
        <path
          d="M21 17v2a2 2 0 0 1-2 2h-2"
        />
        <path
          d="M7 21H5a2 2 0 0 1-2-2v-2"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
        <path
          d="m16 16-1.9-1.9"
        />
      </svg>
      <h1
        class="text-2xl font-bold text-text-emphasis"
      >
        Market Scanner
      </h1>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all mb-6 bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 pt-4"
      >
        <div
          class="flex gap-4 items-end flex-wrap"
        >
          <div
            class="min-w-[220px]"
          >
            <div
              class="flex items-center justify-between mb-1"
            >
              <label
                class="text-xs text-text-secondary"
              >
                Source Location
              </label>
            </div>
            <button
              aria-autocomplete="none"
              aria-controls="radix-_r_2g_"
              aria-expanded="false"
              class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-emphasis"
              data-state="closed"
              dir="ltr"
              role="combobox"
              type="button"
            >
              <span
                style="pointer-events: none;"
              >
                The Forge
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 opacity-50"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="min-w-[220px]"
          >
            <label
              class="text-xs text-text-secondary mb-1 block"
            >
              Destination Location
            </label>
            <button
              aria-autocomplete="none"
              aria-controls="radix-_r_2h_"
              aria-expanded="false"
              class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-sm border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] focus:border-[var(--color-primary-cyan)] focus:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 bg-background-void border-overlay-strong text-text-emphasis"
              data-state="closed"
              dir="ltr"
              role="combobox"
              type="button"
            >
              <span
                style="pointer-events: none;"
              >
                Domain
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-4 w-4 opacity-50"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-[var(--color-border-active)] bg-transparent text-[var(--color-text-primary)] shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-9 px-4 py-2"
            >
              Load
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-scan-search h-4 w-4 mr-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 7V5a2 2 0 0 1 2-2h2"
                />
                <path
                  d="M17 3h2a2 2 0 0 1 2 2v2"
                />
                <path
                  d="M21 17v2a2 2 0 0 1-2 2h-2"
                />
                <path
                  d="M7 21H5a2 2 0 0 1-2-2v-2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
                <path
                  d="m16 16-1.9-1.9"
                />
              </svg>
              Scan
            </button>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-[var(--color-text-secondary)] hover:bg-[var(--color-surface-elevated)] hover:text-[var(--color-text-primary)] h-9 w-9"
              title="Manage trading structures"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rounded-sm border text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] transition-all bg-background-panel border-overlay-subtle"
    >
      <div
        class="p-6 py-8"
      >
        <p
          class="text-center text-text-secondary text-base"
        >
          No arbitrage opportunities found. Try scanning to refresh data.
        </p>
      </div>
    </div>
  </div>
</div>
`;
